JNDI datasource String updated to 'bookApp' (including jaas.config and web.xml)
Generic error page added to web.xml with exception type of Throwable

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,11 @@
          version="3.1">
 
     <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/GenericError.jsp</location>
+    </error-page>
+
+    <error-page>
         <exception-type>hu.mik.pte.prog4.exception.InvalidISBNException</exception-type>
         <location>/ErrorPage.jsp</location>
     </error-page>
